<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context=".SignInActivity">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/logo_height">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:layout_centerInParent="true"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        />
</RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_text_shape"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="10dp"
                >
               <ImageView
                   android:id="@+id/user_name_icon"
                   android:layout_width="@dimen/icon_size"
                   android:layout_height="@dimen/icon_size"
                   android:src="@drawable/user"
                   />

                <EditText
                    android:id="@+id/edt_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:layout_marginLeft="2dp"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/sign_text_shape"
        android:layout_margin="10dp"
        android:padding="10dp"
        >
        <ImageView
            android:id="@+id/user_psw_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center"

            android:src="@drawable/password"
            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_marginLeft="2dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </LinearLayout>

    <RelativeLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
     <CheckBox
         android:id="@+id/check_remember_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="@string/remember_me"
                style="@style/MyRadioButtonStyle"
         android:textSize="@dimen/remember_text_size"
         />
        <ImageView
            android:id="@+id/img_forgot_password"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:background="@drawable/forget"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/sign_in"
            android:background="@drawable/sign_button_shape"
            android:textColor="@color/colorWhite"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        >
       <TextView
           android:id="@+id/dont_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/dont_text"
           android:textSize="@dimen/signup_text_size"
           />
        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/dont_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:clickable="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/signup_text_size"
            />



    </RelativeLayout>

</LinearLayout>