<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.ChangePasswordActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:onClick="back"
                android:src="@drawable/back"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="Change Password"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorWhite"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/sign_text_shape"
                android:gravity="center"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/old_psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:background="#fff"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/sign_text_shape"
                android:gravity="center"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:background="#fff"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/sign_text_shape"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"

                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/conform_psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="2dp"
                    android:background="#fff"
                    android:hint="@string/conform_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="DuplicateIds" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                >
                <Button
                    android:id="@+id/update_psw"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/sign_button_shape"
                    android:text="@string/update"
                    android:textColor="@color/colorWhite"
                    />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>