<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.SignUpActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="Edit Profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorWhite"
            />

    </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height"
            >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/update"
            android:src="@drawable/dummy_user"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp"
    />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/sign_text_shape"
            android:gravity="center"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/user"
                />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:background="#fff"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/sign_text_shape"
            android:gravity="center"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/user"
                />

            <EditText
                android:id="@+id/molibe_nmbr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:background="#fff"
                android:hint="@string/user_number"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/sign_text_shape"
            android:orientation="horizontal"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center"

                android:src="@drawable/gmail"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="#fff"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            >
            <Button
                android:id="@+id/update_profile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/sign_button_shape"
                android:text="@string/update"
                android:textColor="@color/colorWhite"
                />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
</RelativeLayout>