<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prachatech.appointment.activity.CardRegisterActivity">
<android.support.v7.widget.CardView
    android:id="@+id/mytoolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
 android:foregroundGravity="center"
    app:cardBackgroundColor="@color/colorPrimary"
    >
    <ImageView
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:src="@drawable/medspace_home"
        />

</android.support.v7.widget.CardView>
<LinearLayout
    android:id="@+id/welcome_lay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/mytoolbar"
    android:orientation="vertical"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:gravity="center"
    android:text="@string/welcome"
    android:textColor="@color/colorPrimary"
    android:textSize="24sp"
    android:textStyle="italic|bold"

    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/medspace"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/card_reg"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_lay"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="15dp"

            >
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="20dp"
              android:orientation="vertical"
              >
          <ImageView
              android:layout_width="50dp"
              android:layout_height="40dp"
              android:src="@drawable/card1"
              />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:text="Health Cards"
                  android:textColor="@color/colorWhite"
                  android:textSize="18sp"

                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="Available : 2500"
                  android:textColor="@color/colorWhite"
                  android:textSize="12sp"

                  />


          </LinearLayout>




        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="15dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/card2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Health Cards"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Available : 2500"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"

                    />


            </LinearLayout>




        </android.support.v7.widget.CardView>

    </LinearLayout>
</RelativeLayout>
